--- a/src/styles.css
+++ b/src/styles.css
@@ -1,90 +1,42 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0; 
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 22px;
-}
-
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-inline-start: 20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
-}
-
-.board-row:after {
-  clear: both;
-  content: '';
-  display: table;
-}
-
-.status {
-  margin-bottom: 10px;
-}
-.game {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
 }
 
-.game-info {
-  margin-left: 20px;
+input {
+	padding: 10px;
+	width: 200px;
+	margin: 1px;
+}
+
+button {
+	padding: 10px;
+	cursor: pointer;
+	margin: 1px;
+	background-color: #000;
+	color: #fff;
+}
+
+.weather-info {
+	margin: 20px;
+	background-color: #d8d8d8;
+	padding: 40px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  align-items: center;
+  font-size: 1.4rem;
+}
+
+.weather-container {
+	text-align: center;
+	padding: 20px;
 }
