Changed the Article API to Wikipedia

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,7 +59,7 @@ body {
   background-color: skyblue;
 }
 
-.ScienceColumn {
+.ArticleColumn {
     position:absolute;
     right: 5px;
     width: 30%;
